@@ -6,6 +6,7 @@ import org.junit.jupiter.api.TestFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
+import uk.ac.ucl.rits.inform.datasources.ids.HL7Utils;
 import uk.ac.ucl.rits.inform.interchange.InterchangeValue;
 import uk.ac.ucl.rits.inform.interchange.OrderCodingSystem;
 import uk.ac.ucl.rits.inform.interchange.ValueType;
@@ -13,8 +14,9 @@ import uk.ac.ucl.rits.inform.interchange.lab.LabOrderMsg;
 import uk.ac.ucl.rits.inform.interchange.lab.LabResultMsg;
 import uk.ac.ucl.rits.inform.interchange.lab.LabResultStatus;
 
-import java.io.File;
-import java.io.FileInputStream;
+import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
@@ -42,11 +44,8 @@ class TestCoPathResults {
      */
     @Test
     void testValueAsBytes() throws Exception {
-        File reportFile = new File(getClass().getResource("/LabOrders/co_path/report.pdf").getFile());
-        byte[] expectedBytes;
-        try (FileInputStream inputStream = new FileInputStream(reportFile)) {
-            expectedBytes = inputStream.readAllBytes();
-        }
+        URI uri = HL7Utils.getPathFromResource("LabOrders/co_path/report.pdf");
+        byte[] expectedBytes = Files.readAllBytes(Paths.get(uri));
 
         LabResultMsg result = labReader.getFirstOrder(FILE_TEMPLATE, "oru_r01_copath")
                 .getLabResultMsgs().stream()
@@ -78,7 +77,7 @@ class TestCoPathResults {
     @TestFactory
     Stream<DynamicTest> testHl7Inconsistencies() {
         return List.of(
-                "oru_r01_id_change", "oru_r01_sub_id_change", "oru_r01_multiple_value_reps", "oru_r01_unrecognised_data_type")
+                        "oru_r01_id_change", "oru_r01_sub_id_change", "oru_r01_multiple_value_reps", "oru_r01_unrecognised_data_type")
                 .stream()
                 .map(filename -> DynamicTest.dynamicTest(
                         filename,
